// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change icon 1`] = `
<DocumentFragment>
  <button
    aria-label="Phone"
    class="css-0 css-1tcmof5"
    data-chakra-component="CPseudoBox"
    data-testid="btn"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="css-iav4tc css-y3asau"
      data-chakra-component="CBox"
      role="presentation"
      viewBox="0 0 24 24"
    >
      
    
      <path
        d="M0,12a1.5,1.5,0,0,0,1.5,1.5h8.75a.25.25,0,0,1,.25.25V22.5a1.5,1.5,0,0,0,3,0V13.75a.25.25,0,0,1,.25-.25H22.5a1.5,1.5,0,0,0,0-3H13.75a.25.25,0,0,1-.25-.25V1.5a1.5,1.5,0,0,0-3,0v8.75a.25.25,0,0,1-.25.25H1.5A1.5,1.5,0,0,0,0,12Z"
        fill="currentColor"
      />
      
    
    </svg>
  </button>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <button
    aria-label="Phone"
    class="css-0 css-1tcmof5"
    data-chakra-component="CPseudoBox"
    data-testid="btn"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="css-iav4tc css-y3asau"
      data-chakra-component="CBox"
      role="presentation"
      viewBox="0 0 24 24"
    >
      
    
      <g
        stroke="currentColor"
        strokewidth="1.5"
      >
        
      
        <path
          d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
          fill="none"
          strokelinecap="full"
        />
        
      
        <path
          d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
          fill="none"
          strokelinecap="full"
        />
        
      
        <circle
          cx="12"
          cy="12"
          fill="none"
          r="11.25"
          strokemiterlimit="10"
        />
        
    
      </g>
      
    
    </svg>
  </button>
</DocumentFragment>
`;
